bootstrap cols fixed

--- a/adopt.html
+++ b/adopt.html
@@ -42,7 +42,7 @@
 
     <div class="row set-width">
 
-      <div class="col col-sm-3">
+      <div class="col col-3">
            <div id="search_filter_container">
 
 
@@ -50,7 +50,7 @@
 
       </div>
 
-      <div class="col col-sm-9 margin-left">
+      <div class="col col-9 margin-left">
         <div id="board_container" class = "row">
         </div>
       </div>
