--- a/homepage.html
+++ b/homepage.html
@@ -42,29 +42,24 @@
 
     <div class="row set-width">
 
-      <div class="col col-sm-3">
+      <div class="col col-3">
            <div id="search_filter_container">
 
 
         </div>
 
       </div>
-<!--
-      <div class="col col-md-1">
 
-      </div>
--->
-
-      <div class="col col-md-6 margin-left">
+      <div class="col col-6 margin-left">
         <div id="board_container" class = "row">
         </div>
       </div>
 
-      <div class="col col-md-3">
+      <div class="col col-3">
 
 
-        <div class = "row justify-content-sm-center">
-          <div id ="plant_functions_container" class = "col col-sm-9">
+        <div class = "row justify-content-center">
+          <div id ="plant_functions_container" class = "col col-9">
             <button type="button" class="btn btn-secondary btn-block btn-lg plant-function">
               <i class="fas fa-plus-circle"></i> Add plant</button>
 
