--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 <!--    and https://getbootstrap.com/docs/4.0/components/forms/#custom-styles-->
    <div class="container py-5">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-12">
             <h1 class="text-center text-green mb-4"><span class="fab fa-pagelines fa-lg margin-right"></span>PlantSitter</h1>
             <div class="row">
-                <div class="col-md-6 mx-auto col-sm-10">
+                <div class="col-6 mx-auto col-10">
 
                     <!-- form card login -->
                     <div class="card rounded-0">
@@ -100,9 +100,9 @@
 
 
     <div class="row login-pad-top">
-        <div class="col-md-12">
+        <div class="col-12">
             <div class="row">
-                <div class="col-md-6 mx-auto">
+                <div class="col-6 mx-auto">
 
                     <!-- form card login -->
                     <div class="card rounded-0">
@@ -110,9 +110,9 @@
 
                             <div class="row">
 
-                            <div class="col-sm-6">
+                            <div class="col-6">
                             <h3 class="mb-0">New?</h3></div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <button type="submit" class="btn btn-danger btn-lg float-right" id="btnSignup"><span class="fas fa-user-plus margin-right"></span>Sign Up</button>
                             </div>
                         </div>
