--- a/plant-profile.html
+++ b/plant-profile.html
@@ -72,8 +72,8 @@
 
     <div class = "container g-pad" id="plantprofilecontent">
         <div class="row g-pad">
-            <div class="col-3" id="g-photo"></div>
-            <div class="col-6">
+            <div class="col-sm-3" id="g-photo"></div>
+            <div class="col-sm-6">
                 <div class="row font-big text-info"><span class="text-center" id="g-plantname">Plant Name</span></div>
                 <div class="row">
                     <span class="text-center">
@@ -82,86 +82,86 @@
                     </span>
                 </div>
             </div>
-            <div class="col-3" id="g-edit">
+            <div class="col-sm-3" id="g-edit">
 <!--                this is for the edit and save button-->
 <!--                if mode is 1 then you own the plant and can edit-->
             </div>
         </div>
         <div class="row">
-            <div class="col-8 g-min-max-width mb-4">
+            <div class="col-sm-8 g-min-max-width mb-4">
                 <div class="row">
-                    <div class="col-1">
+                    <div class="col-sm-1">
                         <span class="fas fa-tint fa-2x text-aqua"></span>
                     </div>
-                    <div class="col-2">Watering Frequency</div>
-                    <div class="col-6 weekday eliminate-padding-right" id="g-watering">
+                    <div class="col-sm-2">Watering Frequency</div>
+                    <div class="col-sm-6 weekday eliminate-padding-right" id="g-watering">
                     </div>
-                    <div class="col-3" id="g-watering-freq"></div>
+                    <div class="col-sm-3" id="g-watering-freq"></div>
                 </div>
             </div>
-            <div class="col-4 mb-4">
+            <div class="col-sm-4 mb-4">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-sm-2">
                         <span class="fas fa-heartbeat fa-2x margin-right text-red"></span>
                     </div>
-                    <div class="col-6 eliminate-padding-right">Health Status</div>
-                    <div class="col-4" id="g-healthstatus">
+                    <div class="col-sm-6 eliminate-padding-right">Health Status</div>
+                    <div class="col-sm-4" id="g-healthstatus">
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-8 g-min-max-width mb-4">
+            <div class="col-sm-8 g-min-max-width mb-4">
                 <div class="row">
-                    <div class="col-1">
+                    <div class="col-sm-1">
                         <span class="fas fa-poo fa-2x margin-right text-brown"></span>
                     </div>
-                    <div class="col-2">Fertilizer Frequency</div>
-                    <div class="col-6 weekday eliminate-padding-right" id="g-fertilizer">
+                    <div class="col-sm-2">Fertilizer Frequency</div>
+                    <div class="col-sm-6 weekday eliminate-padding-right" id="g-fertilizer">
                     </div>
-                    <div class="col-3" id="g-fertilizer-freq"></div>
+                    <div class="col-sm-3" id="g-fertilizer-freq"></div>
                 </div>
             </div>
-            <div class="col-4 mb-4">
+            <div class="col-sm-4 mb-4">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-sm-2">
                         <span class="fas fa-lightbulb fa-2x margin-right text-yellow"></span>
                     </div>
-                    <div class="col-6 eliminate-padding-right">Light Intensity</div>
-                    <div class="col-4" id="g-light"></div>
+                    <div class="col-sm-6 eliminate-padding-right">Light Intensity</div>
+                    <div class="col-sm-4" id="g-light"></div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-8 g-min-max-width mb-4">
+            <div class="col-sm-8 g-min-max-width mb-4">
                 <div class="row">
-                    <div class="col-1">
+                    <div class="col-sm-1">
                         <span class="fas fa-bug fa-2x margin-right text-gray"></span>
                     </div>
-                    <div class="col-2">Pesticide Frequency</div>
-                    <div class="col-6 weekday eliminate-padding-right" id="g-pesticide">
+                    <div class="col-sm-2">Pesticide Frequency</div>
+                    <div class="col-sm-6 weekday eliminate-padding-right" id="g-pesticide">
                     </div>
-                    <div class="col-3" id="g-pesticide-freq"></div>
+                    <div class="col-sm-3" id="g-pesticide-freq"></div>
                 </div>
             </div>
-            <div class="col-4 mb-4">
+            <div class="col-sm-4 mb-4">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-sm-2">
                         <span class="fas fa-cut fa-2x margin-right"></span>
                     </div>
-                    <div class="col-6 eliminate-padding-right">Requires Trimming</div>
-                    <div class="col-4" id="g-trimming"></div>
+                    <div class="col-sm-6 eliminate-padding-right">Requires Trimming</div>
+                    <div class="col-sm-4" id="g-trimming"></div>
                 </div>
             </div>
         </div>
         <div class="row g-high-pad">
-            <div class="col-1">
+            <div class="col-sm-1">
             <span class="fas fa-info-circle fa-2x margin-right text-orange"></span>
             </div>
-            <div class="col-2">Special Instructions</div>
+            <div class="col-sm-2">Special Instructions</div>
 
-            <div class="col-8" id="g-specialinstructions"></div>
-            <div class="col-1">
+            <div class="col-sm-8" id="g-specialinstructions"></div>
+            <div class="col-sm-1">
                 <span class="float-right">
                     <button class="btn btn-danger g-display-none" id="g-delete-button"><span class="fas fa-trash-alt fa-lg"></span></button>
                 </span>
