--- a/profile.html
+++ b/profile.html
@@ -58,10 +58,10 @@
 <!--  <div id="breadcrumb" ><a class="green-link" href="">Breadcrumb</a></div>-->
     <div class = "container g-pad" id="profilecontent">
         <div class="row g-high-pad">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div id="photo"></div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <div class="row">
                     <div class="text-center font-big text-info" id="name">Name</div>
                 </div>
@@ -70,39 +70,39 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="float-right" id="edit"></div>
             </div>
         </div>
         <div class="g-high-pad">
             <div class="row">
-                        <div class="col-1" id="phone-icon">
+                        <div class="col-sm-1" id="phone-icon">
                             <span class="fas fa-phone fa-2x text-gray"></span>
                         </div>
-                        <div class="col-2">
+                        <div class="col-sm-2">
                             <div class="g-pad" id="phone-text">Phone number</div>
                         </div>
-                        <div class="col-9" id="phone">
+                        <div class="col-sm-9" id="phone">
                         </div>
             </div>
             <div class="row">
-                        <div class="col-1" id="email-icon">
+                        <div class="col-sm-1" id="email-icon">
                             <span class="fas fa-envelope fa-2x text-gray"></span>
                         </div>
-                        <div class="col-2">
+                        <div class="col-sm-2">
                             <div class="g-pad" id="email-text">Email Address</div>
                         </div>
-                        <div class="col-9" id="email">
+                        <div class="col-sm-9" id="email">
                         </div>
             </div>
             <div class="row">
-                        <div class="col-1" id="description-icon">
+                        <div class="col-sm-1" id="description-icon">
                             <span class="fas fa-comment-alt fa-2x text-gray"></span>
                         </div>
-                        <div class="col-2">
+                        <div class="col-sm-2">
                             <div class="g-pad" id="description-text">Description</div>
                         </div>
-                        <div class="col-9" id="description">
+                        <div class="col-sm-9" id="description">
                         </div>
             </div>
         </div>
