Final changes for responsiveness

--- a/plant-profile.html
+++ b/plant-profile.html
@@ -72,7 +72,7 @@
 
     <div class = "container g-pad" id="plantprofilecontent">
         <div class="row g-pad">
-            <div class="col-sm-3" id="g-photo"></div>
+            <div class="col-sm-3"><span id="g-photo"></span></div>
             <div class="col-sm-6">
                 <div class="row font-big text-info"><span class="text-center" id="g-plantname">Plant Name</span></div>
                 <div class="row">
